--- a/teaching/300/300notes/5-3.html
+++ b/teaching/300/300notes/5-3.html
@@ -43,7 +43,15 @@
 <h3 class="ltx_title ltx_runin ltx_title_theorem">
 <span class="ltx_text" style="color:#800000;">  Example </span>5.3.1.</h3>
 <div id="S5.SS3.Thmtheorem1.p1" class="ltx_para ltx_noindent">
-<p class="ltx_p">The function <math id="S5.SS3.Thmtheorem1.p1.m1" class="ltx_Math" alttext="f(x)=e^{x}" display="inline"><mrow><mrow><mi>f</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>x</mi><mo stretchy="false">)</mo></mrow></mrow><mo>=</mo><msup><mi>e</mi><mi>x</mi></msup></mrow></math> seems like it is an invertible function. Is the function injective? Is it surjective? Explain why.</p>
+<p class="ltx_p">The function <math>
+  <mrow>
+    <mi>f</mi>
+    <mo lspace="0.2222em" rspace="0.2222em">:</mo>
+    <mi>ℝ</mi>
+    <mo stretchy="false">→</mo>
+    <mi>ℝ</mi>
+  </mrow>
+</math> defined by <math id="S5.SS3.Thmtheorem1.p1.m1" class="ltx_Math" alttext="f(x)=e^{x}" display="inline"><mrow><mrow><mi>f</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>x</mi><mo stretchy="false">)</mo></mrow></mrow><mo>=</mo><msup><mi>e</mi><mi>x</mi></msup></mrow></math> seems like it is an invertible function. Is the function injective? Is it surjective? Explain why.</p>
 </div>
   <div class="answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
@@ -93,7 +101,16 @@
 <td class="ltx_eqn_cell ltx_eqn_center_padright"></td>
 </tr></tbody>
 </table>
-<p class="ltx_p">Similarly, if we know that <math id="S5.SS3.SSS1.p3.m5" class="ltx_Math" alttext="f^{-1}(y)=x" display="inline"><mrow><mrow><msup><mi>f</mi><mrow><mo>−</mo><mn>1</mn></mrow></msup><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>y</mi><mo stretchy="false">)</mo></mrow></mrow><mo>=</mo><mi>x</mi></mrow></math>, then we should be able to plug in <math id="S5.SS3.SSS1.p3.m6" class="ltx_Math" alttext="f^{-1}(y)" display="inline"><mrow><msup><mi>f</mi><mrow><mo>−</mo><mn>1</mn></mrow></msup><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>y</mi><mo stretchy="false">)</mo></mrow></mrow></math> for <math id="S5.SS3.SSS1.p3.m7" class="ltx_Math" alttext="x" display="inline"><mi>x</mi></math> and get that</p>
+<p class="ltx_p">Similarly, if we know that <math id="S5.SS3.SSS1.p3.m5" class="ltx_Math" alttext="f^{-1}(y)=x" display="inline"><mrow><mrow><msup><mi>f</mi><mrow><mo>−</mo><mn>1</mn></mrow></msup><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>y</mi><mo stretchy="false">)</mo></mrow></mrow><mo>=</mo><mi>x</mi></mrow></math>, then we should be able to plug in <math id="S5.SS3.SSS1.p3.m6" class="ltx_Math" alttext="f^{-1}(y)" display="inline"><mrow><msup><mi>f</mi><mrow><mo>−</mo><mn>1</mn></mrow></msup><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>y</mi><mo stretchy="false">)</mo></mrow></mrow></math> for <math id="S5.SS3.SSS1.p3.m7" class="ltx_Math" alttext="x" display="inline"><mi>x</mi></math> in the equation <math>
+  <mrow>
+    <mi>f</mi>
+    <mo form="prefix" stretchy="false">(</mo>
+    <mi>x</mi>
+    <mo form="postfix" stretchy="false">)</mo>
+    <mo>=</mo>
+    <mi>y</mi>
+  </mrow>
+</math>and get that</p>
 <table id="S5.Ex3" class="ltx_equation ltx_eqn_table">
 
 <tbody><tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -138,7 +155,13 @@
 <span class="ltx_tag ltx_tag_item">(b)</span> 
 <div id="S5.I2.ix2.p1" class="ltx_para ltx_noindent">
 <p class="ltx_p"><math id="S5.I2.ix2.p1.m1" class="ltx_Math" alttext="f(x)=\begin{cases}5x+7&amp;x&lt;0\\
-2x+1&amp;x\geq 0\end{cases}" display="inline"><mrow><mrow><mi>f</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>x</mi><mo stretchy="false">)</mo></mrow></mrow><mo>=</mo><mrow><mo>{</mo><mtable columnspacing="5pt" rowspacing="0pt"><mtr><mtd class="ltx_align_left" columnalign="left"><mrow><mrow><mn>5</mn><mo>⁢</mo><mi>x</mi></mrow><mo>+</mo><mn>7</mn></mrow></mtd><mtd class="ltx_align_left" columnalign="left"><mrow><mi>x</mi><mo>&lt;</mo><mn>0</mn></mrow></mtd></mtr><mtr><mtd class="ltx_align_left" columnalign="left"><mrow><mrow><mn>2</mn><mo>⁢</mo><mi>x</mi></mrow><mo>+</mo><mn>1</mn></mrow></mtd><mtd class="ltx_align_left" columnalign="left"><mrow><mi>x</mi><mo>≥</mo><mn>0</mn></mrow></mtd></mtr></mtable></mrow></mrow></math> and <math id="S5.I2.ix2.p1.m2" class="ltx_Math" alttext="g(x)=7x-11" display="inline"><mrow><mrow><mi>g</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>x</mi><mo stretchy="false">)</mo></mrow></mrow><mo>=</mo><mrow><mrow><mn>7</mn><mo>⁢</mo><mi>x</mi></mrow><mo>−</mo><mn>11</mn></mrow></mrow></math>; <math id="S5.I2.ix2.p1.m3" class="ltx_Math" alttext="g\circ f" display="inline"><mrow><mi>g</mi><mo lspace="0.222em" rspace="0.222em">∘</mo><mi>f</mi></mrow></math></p>
+2x+1&amp;x\geq 0\end{cases}" display="inline"><mrow><mrow><mi>f</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>x</mi><mo stretchy="false">)</mo></mrow></mrow><mo>=</mo><mrow><mo>{</mo><mtable columnspacing="5pt" rowspacing="0pt"><mtr><mtd class="ltx_align_left" columnalign="left"><mrow><mrow><mn>5</mn><mo>⁢</mo><mi>x</mi></mrow><mo>+</mo><mn>7</mn></mrow></mtd><mtd class="ltx_align_left" columnalign="left"><mrow><mi>x</mi><mo>&lt;</mo><mn>0</mn></mrow></mtd></mtr><mtr><mtd class="ltx_align_left" columnalign="left"><mrow><mrow><mn>2</mn><mo>⁢</mo><mi>x</mi></mrow><mo>+</mo><mn>1</mn></mrow></mtd><mtd class="ltx_align_left" columnalign="left"><mrow><mi>x</mi><mo>≥</mo><mn>0</mn></mrow></mtd></mtr></mtable></mrow></mrow></math> and <math id="S5.I2.ix2.p1.m2" class="ltx_Math" alttext="g(x)=7x-11" display="inline"><mrow><mrow><mi>g</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>x</mi><mo stretchy="false">)</mo></mrow></mrow><mo>=</mo><mrow><mrow><mn>7</mn><mo>⁢</mo><mi>x</mi></mrow><mo>−</mo><mn>11</mn></mrow></mrow></math>; <math id="S5.I2.ix2.p1.m3" class="ltx_Math" alttext="g\circ f" display="inline"><mrow><mi>g</mi><mo lspace="0.222em" rspace="0.222em">∘</mo><mi>f</mi></mrow></math> and <math>
+  <mrow>
+    <mi>f</mi>
+    <mo>∘</mo>
+    <mi>g</mi>
+  </mrow>
+</math></p>
 </div>
   <div class="half-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
