--- a/teaching/300/300notes/5-4.html
+++ b/teaching/300/300notes/5-4.html
@@ -116,6 +116,8 @@
   <div class="half-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 <div class="ltx_pagination ltx_role_newpage"></div>
+<p class="ltx_p">(More space for Theorem 5.4.4.)</p>
+<div class="ltx_pagination ltx_role_newpage"></div>
 <div id="S5.SS4.Thmtheorem5" class="ltx_theorem ltx_theorem_example">
 <h3 class="ltx_title ltx_runin ltx_title_theorem">
 <span class="ltx_text" style="color:#800000;">  Example </span>5.4.5.</h3>
@@ -125,6 +127,7 @@
 </div>
   <div class="half-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
+<div class="ltx_pagination ltx_role_newpage"></div>
 <div id="S5.SS4.Thmtheorem6" class="ltx_theorem ltx_theorem_theorem">
 <h3 class="ltx_title ltx_runin ltx_title_theorem">
 <span class="ltx_text" style="color:#006600;">  Theorem </span>5.4.6.</h3>
