--- a/teaching/300/300notes/5-5.html
+++ b/teaching/300/300notes/5-5.html
@@ -101,7 +101,7 @@
 <h3 class="ltx_title ltx_runin ltx_title_theorem">
 <span class="ltx_text" style="color:#800000;">  Example </span>5.5.3.</h3>
 <div id="S5.SS5.Thmtheorem3.p1" class="ltx_para">
-<p class="ltx_p">Let <math id="S5.SS5.Thmtheorem3.p1.m1" class="ltx_Math" alttext="f(x)=x^{2}" display="inline"><mrow><mrow><mi>f</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>x</mi><mo stretchy="false">)</mo></mrow></mrow><mo>=</mo><msup><mi>x</mi><mn>2</mn></msup></mrow></math>. Find <math id="S5.SS5.Thmtheorem3.p1.m2" class="ltx_Math" alttext="f^{-1}([-1,1])" display="inline"><mrow><msup><mi>f</mi><mrow><mo>−</mo><mn>1</mn></mrow></msup><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mrow><mo stretchy="false">[</mo><mrow><mo>−</mo><mn>1</mn></mrow><mo>,</mo><mn>1</mn><mo stretchy="false">]</mo></mrow><mo stretchy="false">)</mo></mrow></mrow></math> and <math id="S5.SS5.Thmtheorem3.p1.m3" class="ltx_Math" alttext="f^{-1}([-1,4])" display="inline"><mrow><msup><mi>f</mi><mrow><mo>−</mo><mn>1</mn></mrow></msup><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mrow><mo stretchy="false">[</mo><mrow><mo>−</mo><mn>1</mn></mrow><mo>,</mo><mn>4</mn><mo stretchy="false">]</mo></mrow><mo stretchy="false">)</mo></mrow></mrow></math>.</p>
+<p class="ltx_p">Let <math id="S5.SS5.Thmtheorem3.p1.m1" class="ltx_Math" alttext="f(x)=x^{2}" display="inline"><mrow><mrow><mi>f</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>x</mi><mo stretchy="false">)</mo></mrow></mrow><mo>=</mo><msup><mi>x</mi><mn>2</mn></msup></mrow></math>. Find <math id="S5.SS5.Thmtheorem3.p1.m3" class="ltx_Math" alttext="f^{-1}([-1,4])" display="inline"><mrow><msup><mi>f</mi><mrow><mo>−</mo><mn>1</mn></mrow></msup><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mrow><mo stretchy="false">[</mo><mrow><mo>−</mo><mn>1</mn></mrow><mo>,</mo><mn>4</mn><mo stretchy="false">]</mo></mrow><mo stretchy="false">)</mo></mrow></mrow></math>.</p>
 </div>
 </div>
   <div class="half-answer-space" aria-hidden="true"></div>
@@ -150,7 +150,44 @@
   <div class="answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 <div id="S5.I3.ix1.p2" class="ltx_para ltx_noindent">
-<p class="ltx_p">Using this, show that the following statement is <span class="ltx_text ltx_font_italic">false</span>: for any function <math id="S5.I3.ix1.p2.m1" class="ltx_Math" alttext="f:X\rightarrow Y" display="inline"><mrow><mi>f</mi><mo lspace="0.278em" rspace="0.278em">:</mo><mrow><mi>X</mi><mo stretchy="false">→</mo><mi>Y</mi></mrow></mrow></math> where <math id="S5.I3.ix1.p2.m2" class="ltx_Math" alttext="C,D\subset Y" display="inline"><mrow><mrow><mi>C</mi><mo>,</mo><mi>D</mi></mrow><mo>⊂</mo><mi>Y</mi></mrow></math>, <math id="S5.I3.ix1.p2.m3" class="ltx_Math" alttext="f(C)\cap f(D)\subset f^{-1}(C\cap D)" display="inline"><mrow><mrow><mrow><mi>f</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>C</mi><mo stretchy="false">)</mo></mrow></mrow><mo>∩</mo><mrow><mi>f</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>D</mi><mo stretchy="false">)</mo></mrow></mrow></mrow><mo>⊂</mo><mrow><msup><mi>f</mi><mrow><mo>−</mo><mn>1</mn></mrow></msup><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mrow><mi>C</mi><mo>∩</mo><mi>D</mi></mrow><mo stretchy="false">)</mo></mrow></mrow></mrow></math>.</p>
+<p class="ltx_p">Using this, show that the following statement is <span class="ltx_text ltx_font_italic">false</span>: for any function <math id="S5.I3.ix1.p2.m1" class="ltx_Math" alttext="f:X\rightarrow Y" display="inline"><mrow><mi>f</mi><mo lspace="0.278em" rspace="0.278em">:</mo><mrow><mi>X</mi><mo stretchy="false">→</mo><mi>Y</mi></mrow></mrow></math> where <math id="S5.I3.ix1.p2.m2" class="ltx_Math" alttext="C,D\subset Y" display="inline"><mrow><mrow><mi>C</mi><mo>,</mo><mi>D</mi></mrow><mo>⊂</mo><mi>Y</mi></mrow></math>, <math>
+  <mrow>
+    <msup>
+      <mi>f</mi>
+      <mrow class="tml-lrg-pad">
+        <mo lspace="0em" rspace="0em">−</mo>
+        <mn>1</mn>
+      </mrow>
+    </msup>
+    <mo form="prefix" stretchy="false">(</mo>
+    <mi>C</mi>
+    <mo form="postfix" stretchy="false">)</mo>
+    <mo>∩</mo>
+    <msup>
+      <mi>f</mi>
+      <mrow class="tml-lrg-pad">
+        <mo lspace="0em" rspace="0em">−</mo>
+        <mn>1</mn>
+      </mrow>
+    </msup>
+    <mo form="prefix" stretchy="false">(</mo>
+    <mi>D</mi>
+    <mo form="postfix" stretchy="false">)</mo>
+    <mo>⊆</mo>
+    <msup>
+      <mi>f</mi>
+      <mrow class="tml-lrg-pad">
+        <mo lspace="0em" rspace="0em">−</mo>
+        <mn>1</mn>
+      </mrow>
+    </msup>
+    <mo form="prefix" stretchy="false">(</mo>
+    <mi>C</mi>
+    <mo>∩</mo>
+    <mi>D</mi>
+    <mo form="postfix" stretchy="false">)</mo>
+  </mrow>
+</math>.</p>
 </div>
   <div class="answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
@@ -163,7 +200,7 @@
   <div class="answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 <div id="S5.I3.ix2.p2" class="ltx_para ltx_noindent">
-<p class="ltx_p">Using this, show that the following statement is <span class="ltx_text ltx_font_italic">false</span>: for any function <math id="S5.I3.ix2.p2.m1" class="ltx_Math" alttext="f:X\rightarrow Y" display="inline"><mrow><mi>f</mi><mo lspace="0.278em" rspace="0.278em">:</mo><mrow><mi>X</mi><mo stretchy="false">→</mo><mi>Y</mi></mrow></mrow></math> where <math id="S5.I3.ix2.p2.m2" class="ltx_Math" alttext="A,B\subset X" display="inline"><mrow><mrow><mi>A</mi><mo>,</mo><mi>B</mi></mrow><mo>⊂</mo><mi>X</mi></mrow></math>, <math id="S5.I3.ix2.p2.m3" class="ltx_Math" alttext="f(A)\cap f(B)\subset f(A\cap B)" display="inline"><mrow><mrow><mrow><mi>f</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>A</mi><mo stretchy="false">)</mo></mrow></mrow><mo>∩</mo><mrow><mi>f</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>B</mi><mo stretchy="false">)</mo></mrow></mrow></mrow><mo>⊂</mo><mrow><mi>f</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mrow><mi>A</mi><mo>∩</mo><mi>B</mi></mrow><mo stretchy="false">)</mo></mrow></mrow></mrow></math>.</p>
+<p class="ltx_p">Using this, show that the following statement is <span class="ltx_text ltx_font_italic">false</span>: for any function <math id="S5.I3.ix2.p2.m1" class="ltx_Math" alttext="f:X\rightarrow Y" display="inline"><mrow><mi>f</mi><mo lspace="0.278em" rspace="0.278em">:</mo><mrow><mi>X</mi><mo stretchy="false">→</mo><mi>Y</mi></mrow></mrow></math> where <math id="S5.I3.ix2.p2.m2" class="ltx_Math" alttext="A,B\subset X" display="inline"><mrow><mrow><mi>A</mi><mo>,</mo><mi>B</mi></mrow><mo>⊂</mo><mi>X</mi></mrow></math>, <math id="S5.I3.ix2.p2.m3" class="ltx_Math" alttext="f(A)\cap f(B)\subset f(A\cap B)" display="inline"><mrow><mrow><mrow><mi>f</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>A</mi><mo stretchy="false">)</mo></mrow></mrow><mo>∩</mo><mrow><mi>f</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>B</mi><mo stretchy="false">)</mo></mrow></mrow></mrow><mo>⊆</mo><mrow><mi>f</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mrow><mi>A</mi><mo>∩</mo><mi>B</mi></mrow><mo stretchy="false">)</mo></mrow></mrow></mrow></math>.</p>
 </div>
   <div class="answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
