--- a/teaching/300/300notes/6-5.html
+++ b/teaching/300/300notes/6-5.html
@@ -76,7 +76,7 @@ define <math id="S6.SS5.Thmtheorem2.p1.m2" class="ltx_Math" alttext="n\mathbb{Z}
 <h3 class="ltx_title ltx_runin ltx_title_theorem">
 <span class="ltx_text" style="color:#800000;">  Example </span>6.5.4.</h3>
 <div id="S6.SS5.Thmtheorem4.p1" class="ltx_para">
-<p class="ltx_p">Make a conjecture about <math id="S6.SS5.Thmtheorem4.p1.m1" class="ltx_Math" alttext="p\mathbb{Z}\cap q\mathbb{Z}" display="inline"><mrow><mrow><mi>p</mi><mo>⁢</mo><mi>ℤ</mi></mrow><mo>∩</mo><mrow><mi>q</mi><mo>⁢</mo><mi>ℤ</mi></mrow></mrow></math> where <math id="S6.SS5.Thmtheorem4.p1.m2" class="ltx_Math" alttext="p" display="inline"><mi>p</mi></math> and <math id="S6.SS5.Thmtheorem4.p1.m3" class="ltx_Math" alttext="q" display="inline"><mi>q</mi></math> are both prime numbers. Explain how you arrive at your answer.</p>
+<p class="ltx_p">Make a conjecture about <math id="S6.SS5.Thmtheorem4.p1.m1" class="ltx_Math" alttext="p\mathbb{Z}\cap q\mathbb{Z}" display="inline"><mrow><mrow><mi>p</mi><mo>⁢</mo><mi>ℤ</mi></mrow><mo>∩</mo><mrow><mi>q</mi><mo>⁢</mo><mi>ℤ</mi></mrow></mrow></math> where <math id="S6.SS5.Thmtheorem4.p1.m2" class="ltx_Math" alttext="p" display="inline"><mi>p</mi></math> and <math id="S6.SS5.Thmtheorem4.p1.m3" class="ltx_Math" alttext="q" display="inline"><mi>q</mi></math> are distinct prime numbers. Explain how you arrive at your answer.</p>
 </div>
 </div>
   <div class="answer-space" aria-hidden="true"></div>
@@ -226,7 +226,7 @@ define <math id="S6.SS5.Thmtheorem2.p1.m2" class="ltx_Math" alttext="n\mathbb{Z}
 <td class="ltx_eqn_cell ltx_eqn_center_padright"></td>
 </tr></tbody>
 </table>
-<p class="ltx_p">Compute <math id="S6.SS5.Thmtheorem13.p1.m1" class="ltx_Math" alttext="[7^{1942}]_{100}" display="inline"><msub><mrow><mo stretchy="false">[</mo><msup><mn>7</mn><mn>1942</mn></msup><mo stretchy="false">]</mo></mrow><mn>100</mn></msub></math>. (Hint: do you see a pattern in the numbers above? How about if you compute what they are equivalent to modulo 100?)</p>
+<p class="ltx_p">Compute <math id="S6.SS5.Thmtheorem13.p1.m1" class="ltx_Math" alttext="[7^{1942}]_{100}" display="inline"><msub><mrow><mo stretchy="false">[</mo><msup><mn>7</mn><mn>1942</mn></msup><mo stretchy="false">]</mo></mrow><mn>100</mn></msub></math>. (Hint: do you see a pattern in the numbers above? How about if you compute what the numbers above are equivalent to modulo 100?)</p>
 </div>
 </div>
   <div class="large-answer-space" aria-hidden="true"></div>
