Update 4-1.html images

--- a/teaching/300/300readings/4-1.html
+++ b/teaching/300/300readings/4-1.html
@@ -1634,7 +1634,7 @@ breed. Since <math id="S4.I11.i18.I1.i3.p5.m10" class="ltx_Math" data-alttext="D
 <div id="S4.I12.i20.p1" class="ltx_para">
 <p class="ltx_p">Regions of a Circle. Place <math id="S4.I12.i20.p1.m1" class="ltx_Math" data-alttext="n" display="inline"><mi>n</mi></math> equally spaced points on a circle and connect each pair of points with the chord of the circle determined by that pair of points. See Figure 4.1.</p>
 </div>
-<figure id="S4.F1" class="ltx_figure"><img src="images/2b656f65-89b4-4b76-be53-fbbcb2f5cf40-19.jpg" id="S4.F1.g1" class="ltx_graphics ltx_centering ltx_img_square" width="250" height="276" alt="Three circles. The first has 2 points connected by a chord forming 2 regions. The second has 3 points connected by chords forming 4 regions. The third has 4 points connected by chords forming 8 regions.">
+<figure id="S4.F1" class="ltx_figure"><img src="https://johnweeks03.github.io/teaching/300/2b656f65-89b4-4b76-be53-fbbcb2f5cf40-19.jpg" id="S4.F1.g1" class="ltx_graphics ltx_centering ltx_img_square" width="250" height="276" alt="Three circles. The first has 2 points connected by a chord forming 2 regions. The second has 3 points connected by chords forming 4 regions. The third has 4 points connected by chords forming 8 regions.">
 <figcaption class="ltx_caption ltx_centering">Figure 4.1: Regions of Circles</figcaption>
 </figure>
 <div id="S4.I12.i20.p2" class="ltx_para">
@@ -1669,7 +1669,7 @@ breed. Since <math id="S4.I11.i18.I1.i3.p5.m10" class="ltx_Math" data-alttext="D
 <div id="S4.I12.i20.I1.i5.p1" class="ltx_para">
 <p class="ltx_p">Explain why this activity shows that the inductive step is an essential part of a proof by mathematical induction.</p>
 </div>
-<figure id="S4.F2" class="ltx_figure"><img src="images/2b656f65-89b4-4b76-be53-fbbcb2f5cf40-20.jpg" id="S4.F2.g1" class="ltx_graphics ltx_centering ltx_img_landscape" width="250" height="117" alt="Two circles. The first has 5 points connected by chords forming 16 regions. The second has 6 points connected by chords forming 31 regions.">
+<figure id="S4.F2" class="ltx_figure"><img src="https://johnweeks03.github.io/teaching/300/2b656f65-89b4-4b76-be53-fbbcb2f5cf40-20.jpg" id="S4.F2.g1" class="ltx_graphics ltx_centering ltx_img_landscape" width="250" height="117" alt="Two circles. The first has 5 points connected by chords forming 16 regions. The second has 6 points connected by chords forming 31 regions.">
 <figcaption class="ltx_caption ltx_centering">Figure 4.2: Regions of Circles</figcaption>
 </figure>
 </li>
