Update 2-1.html 2.1.8 typo

--- a/teaching/300/300notes/2-1.html
+++ b/teaching/300/300notes/2-1.html
@@ -193,7 +193,7 @@
 <h3 class="ltx_title ltx_runin ltx_title_theorem">
 <span class="ltx_text" style="color:#800000;">  Example </span>2.1.8.</h3>
 <div id="S2.SS1.Thmtheorem7.p1" class="ltx_para">
-<p class="ltx_p"><span class="ltx_text ltx_font_italic">Disprove</span> the statement: “For an integer <math id="S2.SS1.Thmtheorem7.p1.m1" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math>, the value <math id="S2.SS1.Thmtheorem7.p1.m2" class="ltx_Math" alttext="n^{2}-1" display="inline"><mrow><msup><mi>n</mi><mn>2</mn></msup><mo>−</mo><mn>1</mn></mrow></math> is even iff 4 divides <math id="S2.SS1.Thmtheorem7.p1.m3" class="ltx_Math" alttext="n^{2}-1" display="inline"><mrow><msup><mi>n</mi><mn>2</mn></msup><mo>−</mo><mn>1</mn></mrow></math>.”</p>
+<p class="ltx_p"><span class="ltx_text ltx_font_italic">Disprove</span> the statement: “For an integer <math id="S2.SS1.Thmtheorem7.p1.m1" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math>, the value <math id="S2.SS1.Thmtheorem7.p1.m1" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> is even iff 4 divides <math id="S2.SS1.Thmtheorem7.p1.m1" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math>.”</p>
 </div>
   <div class="half-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
